// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyMessage should not render in xs 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1nvh1sc"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Verify
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="flex flex-col sm:mt-8"
            >
              <span
                class="mb-1 hidden text-lg font-semibold sm:block"
              >
                Verification Method
              </span>
              <span
                class="hidden text-sm font-medium text-theme-secondary-500 dark:text-theme-secondary-700 sm:block"
              >
                Input fields manually or provide a JSON string.
              </span>
              <div
                class="flex items-center sm:mt-6"
              >
                <span
                  class="css-b8nf83"
                  role="button"
                >
                  JSON
                </span>
                <label
                  class="css-xklln0"
                >
                  <input
                    checked=""
                    class="css-1r71f0z toggle-input"
                    type="checkbox"
                  />
                  <div
                    class="css-7lwhds toggle-handle"
                  >
                    <span
                      class="css-1274c8s"
                    />
                  </div>
                </label>
                <span
                  class="css-13d6ubz"
                  role="button"
                >
                  Manual
                </span>
              </div>
              <form
                class="space-y-6"
                data-testid="Form"
                id="VerifyMessage__form"
              >
                <div
                  class="mt-4 space-y-5"
                  data-testid="VerifyMessage__manual"
                >
                  <fieldset
                    class="flex flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="signatory"
                    >
                      Public Key
                    </label>
                    <div
                      class=" css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="VerifyMessage__manual-signatory"
                          name="signatory"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="flex flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="message"
                    >
                      Message
                    </label>
                    <div
                      class=" css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="VerifyMessage__manual-message"
                          name="message"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="flex flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="signature"
                    >
                      Signature
                    </label>
                    <div
                      class=" css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="VerifyMessage__manual-signature"
                          name="signature"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                </div>
                <div
                  class="css-ngzslp"
                >
                  <button
                    class="css-1jhy6v9"
                    data-testid="VerifyMessage__cancel"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="css-1yqe28v"
                    data-testid="VerifyMessage__submit"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Verify
                    </div>
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VerifyMessage should not render in xs 2`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1nvh1sc"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Verify
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Authenticate a message from an address below.
            </div>
            <div
              class="flex flex-col sm:mt-8"
            >
              <span
                class="mb-1 hidden text-lg font-semibold sm:block"
              >
                Verification Method
              </span>
              <span
                class="hidden text-sm font-medium text-theme-secondary-500 dark:text-theme-secondary-700 sm:block"
              >
                Input fields manually or provide a JSON string.
              </span>
              <div
                class="flex items-center sm:mt-6"
              >
                <span
                  class="css-b8nf83"
                  role="button"
                >
                  JSON
                </span>
                <label
                  class="css-xklln0"
                >
                  <input
                    checked=""
                    class="css-1r71f0z toggle-input"
                    type="checkbox"
                  />
                  <div
                    class="css-7lwhds toggle-handle"
                  >
                    <span
                      class="css-1274c8s"
                    />
                  </div>
                </label>
                <span
                  class="css-13d6ubz"
                  role="button"
                >
                  Manual
                </span>
              </div>
              <form
                class="space-y-6"
                data-testid="Form"
                id="VerifyMessage__form"
              >
                <div
                  class="mt-4 space-y-5"
                  data-testid="VerifyMessage__manual"
                >
                  <fieldset
                    class="flex flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="signatory"
                    >
                      Public Key
                    </label>
                    <div
                      class=" css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="VerifyMessage__manual-signatory"
                          name="signatory"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="flex flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="message"
                    >
                      Message
                    </label>
                    <div
                      class=" css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="VerifyMessage__manual-message"
                          name="message"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="flex flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="signature"
                    >
                      Signature
                    </label>
                    <div
                      class=" css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="VerifyMessage__manual-signature"
                          name="signature"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                </div>
                <div
                  class="css-ngzslp"
                >
                  <button
                    class="css-1jhy6v9"
                    data-testid="VerifyMessage__cancel"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="css-1yqe28v"
                    data-testid="VerifyMessage__submit"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Verify
                    </div>
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VerifyMessage should not render in xs 3`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1nvh1sc"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Verify
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Authenticate a message from an address below.
            </div>
            <div
              class="flex flex-col sm:mt-8"
            >
              <span
                class="mb-1 hidden text-lg font-semibold sm:block"
              >
                Verification Method
              </span>
              <span
                class="hidden text-sm font-medium text-theme-secondary-500 dark:text-theme-secondary-700 sm:block"
              >
                Input fields manually or provide a JSON string.
              </span>
              <div
                class="flex items-center sm:mt-6"
              >
                <span
                  class="css-b8nf83"
                  role="button"
                >
                  JSON
                </span>
                <label
                  class="css-xklln0"
                >
                  <input
                    checked=""
                    class="css-1r71f0z toggle-input"
                    type="checkbox"
                  />
                  <div
                    class="css-7lwhds toggle-handle"
                  >
                    <span
                      class="css-1274c8s"
                    />
                  </div>
                </label>
                <span
                  class="css-13d6ubz"
                  role="button"
                >
                  Manual
                </span>
              </div>
              <form
                class="space-y-6"
                data-testid="Form"
                id="VerifyMessage__form"
              >
                <div
                  class="mt-4 space-y-5"
                  data-testid="VerifyMessage__manual"
                >
                  <fieldset
                    class="flex flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="signatory"
                    >
                      Public Key
                    </label>
                    <div
                      class=" css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="VerifyMessage__manual-signatory"
                          name="signatory"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="flex flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="message"
                    >
                      Message
                    </label>
                    <div
                      class=" css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="VerifyMessage__manual-message"
                          name="message"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="flex flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="signature"
                    >
                      Signature
                    </label>
                    <div
                      class=" css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="VerifyMessage__manual-signature"
                          name="signature"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                </div>
                <div
                  class="css-ngzslp"
                >
                  <button
                    class="css-1jhy6v9"
                    data-testid="VerifyMessage__cancel"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="css-1yqe28v"
                    data-testid="VerifyMessage__submit"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Verify
                    </div>
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VerifyMessage should not render in xs 4`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1nvh1sc"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Verify
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Authenticate a message from an address below.
            </div>
            <div
              class="flex flex-col sm:mt-8"
            >
              <span
                class="mb-1 hidden text-lg font-semibold sm:block"
              >
                Verification Method
              </span>
              <span
                class="hidden text-sm font-medium text-theme-secondary-500 dark:text-theme-secondary-700 sm:block"
              >
                Input fields manually or provide a JSON string.
              </span>
              <div
                class="flex items-center sm:mt-6"
              >
                <span
                  class="css-b8nf83"
                  role="button"
                >
                  JSON
                </span>
                <label
                  class="css-xklln0"
                >
                  <input
                    checked=""
                    class="css-1r71f0z toggle-input"
                    type="checkbox"
                  />
                  <div
                    class="css-7lwhds toggle-handle"
                  >
                    <span
                      class="css-1274c8s"
                    />
                  </div>
                </label>
                <span
                  class="css-13d6ubz"
                  role="button"
                >
                  Manual
                </span>
              </div>
              <form
                class="space-y-6"
                data-testid="Form"
                id="VerifyMessage__form"
              >
                <div
                  class="mt-4 space-y-5"
                  data-testid="VerifyMessage__manual"
                >
                  <fieldset
                    class="flex flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="signatory"
                    >
                      Public Key
                    </label>
                    <div
                      class=" css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="VerifyMessage__manual-signatory"
                          name="signatory"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="flex flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="message"
                    >
                      Message
                    </label>
                    <div
                      class=" css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="VerifyMessage__manual-message"
                          name="message"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="flex flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="signature"
                    >
                      Signature
                    </label>
                    <div
                      class=" css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="VerifyMessage__manual-signature"
                          name="signature"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                </div>
                <div
                  class="css-ngzslp"
                >
                  <button
                    class="css-1jhy6v9"
                    data-testid="VerifyMessage__cancel"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="css-1yqe28v"
                    data-testid="VerifyMessage__submit"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Verify
                    </div>
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VerifyMessage should not render in xs 5`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1nvh1sc"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Verify
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Authenticate a message from an address below.
            </div>
            <div
              class="flex flex-col sm:mt-8"
            >
              <span
                class="mb-1 hidden text-lg font-semibold sm:block"
              >
                Verification Method
              </span>
              <span
                class="hidden text-sm font-medium text-theme-secondary-500 dark:text-theme-secondary-700 sm:block"
              >
                Input fields manually or provide a JSON string.
              </span>
              <div
                class="flex items-center sm:mt-6"
              >
                <span
                  class="css-b8nf83"
                  role="button"
                >
                  JSON
                </span>
                <label
                  class="css-xklln0"
                >
                  <input
                    checked=""
                    class="css-1r71f0z toggle-input"
                    type="checkbox"
                  />
                  <div
                    class="css-7lwhds toggle-handle"
                  >
                    <span
                      class="css-1274c8s"
                    />
                  </div>
                </label>
                <span
                  class="css-13d6ubz"
                  role="button"
                >
                  Manual
                </span>
              </div>
              <form
                class="space-y-6"
                data-testid="Form"
                id="VerifyMessage__form"
              >
                <div
                  class="mt-4 space-y-5"
                  data-testid="VerifyMessage__manual"
                >
                  <fieldset
                    class="flex flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="signatory"
                    >
                      Public Key
                    </label>
                    <div
                      class=" css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="VerifyMessage__manual-signatory"
                          name="signatory"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="flex flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="message"
                    >
                      Message
                    </label>
                    <div
                      class=" css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="VerifyMessage__manual-message"
                          name="message"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="flex flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="signature"
                    >
                      Signature
                    </label>
                    <div
                      class=" css-1psxlcd"
                    >
                      <div
                        class="relative flex h-full flex-1"
                      >
                        <input
                          autocomplete="off"
                          class="no-ligatures w-full border-none css-1nupw50"
                          data-testid="VerifyMessage__manual-signature"
                          name="signature"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </fieldset>
                </div>
                <div
                  class="css-ngzslp"
                >
                  <button
                    class="css-1jhy6v9"
                    data-testid="VerifyMessage__cancel"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Cancel
                    </div>
                  </button>
                  <button
                    class="css-1yqe28v"
                    data-testid="VerifyMessage__submit"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Verify
                    </div>
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
